--- a/res/layout/fragment_main_02.xml
+++ b/res/layout/fragment_main_02.xml
@@ -8,6 +8,7 @@
             android:id="@+id/xListView"
             android:layout_width="match_parent"
             android:cacheColorHint="#00000000"
+            android:listSelector="#00000000"
             android:layout_height="match_parent"
     />
 
