--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -11,7 +11,7 @@
     <color name="white">#ffffff</color>
     <color name="gray">#cccccc</color>
 
-    <color name="drop_down_selected">#7B1FA2</color>
+    <color name="drop_down_selected">#37b9d4</color>
     <color name="drop_down_unselected">#111111</color>
 
     <color name="mask_color">#88888888</color>
