--- a/res/layout/xlistview_footer.xml
+++ b/res/layout/xlistview_footer.xml
@@ -12,8 +12,8 @@
 
         <ProgressBar
             android:id="@+id/xlistview_footer_progressbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerInParent="true"
             android:visibility="invisible" />
 
